# open-container

./: .gitignore  .travis.yml  README.md  app.py  requirements.txt  ride.py  setup.cfg  tox.ini
.travis/: config.json
migrations/versions/: 133fb6418e26_.py  2e3402f5e486_.py
open-container/: ride.py
open_container/: __init__.py  database_helpers.py  models.py  ride.py
open_container/css/: open_container.css
open_container/js/: open-container.js
open_container/templates/: base.html  create_event.html  create_ride.html  edit_event.html  index.html  list_event.html  test.html  view_event.html
tests/: test_create_db.py  test_events.py  test_new.py  test_passengers.py  test_rides.py
