[metadata]
name = open-container
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = Python Ride Board with Flask
description-file = README.md
license = GPLv3.0+
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    ride
[files]
packages =
    open-container
