[metadata]
name = open-container
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = Python Ride Board with Flask
description-file = README.md
license = Apache
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    ride
[files]
packages =
    open-container
[entry_points]
console_scripts =
    open-container=open_container.ride:main
    open-container-create-db=open_container.ride:create_database
